# CRL1

./: .gitignore  README.md  go_to_specific_point.py  run_simulator.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/py_action_server/share/py_action_server/: package.bash  package.sh  package.zsh
plans_to_run/: box_demo.txt  empty_demo.txt  plan0.txt  plan1.txt  plan2.txt  plan6.txt  world_demo.txt
src/crl_executer/: package.xml  setup.cfg  setup.py
src/crl_executer/crl_executer/: executer.py  gazebo.py  gazebo_box.py  gazebo_world.py  path_client.py  position_service.py  spawn_burger.py  transformations.py
src/executer_interfaces/: CMakeLists.txt  package.xml
src/executer_interfaces/msg/: PlanCommand.msg
src/goal_status_interface/: CMakeLists.txt  package.xml
src/goal_status_interface/msg/: GoalStatus.msg
src/mock_publisher/: package.xml  setup.cfg  setup.py
src/mock_publisher/mock_publisher/: publisher.py  txt_to_plan.py
src/multi_burger_interfaces/: CMakeLists.txt  package.xml
src/multi_burger_interfaces/srv/: Position.srv
src/py_action_server/: package.xml  setup.py
src/py_action_server/py_action_server/: __init__.py  action_server.py  robot_manager.py
src/robot_path_assignment_interface/: CMakeLists.txt  package.xml
src/robot_path_assignment_interface/msg/: RobotPathAssignment.msg  RobotPathAssignmentPlan.msg
src/robot_status_interface/: CMakeLists.txt  package.xml
src/robot_status_interface/msg/: RobotStatus.msg
src/test_action/: CMakeLists.txt  package.xml
(+49 files in other folders)
