<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crl_executer</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1912.mor@gmail.com">mor</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <exec_depend>goal_status_interface</exec_depend>
  <exec_depend>robot_status_interface</exec_depend>
  <exec_depend>robot_path_assignment_interface</exec_depend>
  <exec_depend>ros2launch</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
